# agricTech_chatbot_rag_llm

./: .gitignore  LICENSE  README.md  conftest.py  pyproject.toml  requirements.txt  run_app.py  setup_environment.py
app/: auth.py  config.py  database.py  main.py  models.py  ui.py  ui_components.py  utils.py
app/backend/: auth.py  constants.py  database.py  main.py  models.py  role_validator.py  utils.py
app/backend/rag_utils/: csv_query.py  query_classifier.py  rag_chain.py  rag_module.py  secrets.py
app/frontend/: ui.py  ui_components.py
app/frontend/styles/: ai_response.css  base.css  loader.css  toast.css  toolbar.css
app/rag_utils/: __init__.py  csv_query.py  query_classifier.py  rag_chain.py  rag_module.py  secrets.py
assets/: style.css
resources_2/agriculture expert/: Agricultural_Expert.md
resources_2/field worker/: field_worker_and_technical.md
resources_2/finance officer/: finance_officer_knowledge_base.md
resources_2/hr/: hr_knowledge_base.md
resources_2/market analysis/: market_analysis.md
resources_2/salesperson/: Salesperson.md
resources_2/supply chain manager/: supply_chain_manager_knowledge_base.md
static/data/: structured_queries.duckdb  structured_queries.duckdb.wal
static/uploads/Admin/: guide.md  test.csv
static/uploads/Farmer/: farmer_knowledge_base.md
static/uploads/Finance Officer/: req_test.md
static/uploads/HR/: chennai_agriculture_hr.csv
static/uploads/csvrole/: test.csv
static/uploads/mdrole/: guide.md
tests/: README.md  conftest.py  generate_report.py  run_tests.py  test_chatbot.py  test_ui.py
